# crawler

./: .gitignore  app.sh  consts.py  pyproject.toml  script_crawler.py  script_download.py
crawler/: __init__.py  __main__.py  binance.py
crawler/binance/: downloader.py  process_file_input.py  web_crawler.py
