[tool.poetry]
name = "crawler"
version = "0.1.0"
description = "Binance batch data web-crawler"
authors = ["Hollywood <44089845+Vitali-Lupusor@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
pylint = "^2.14.5"
flake8 = "^4.0.1"
pydocstyle = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
